Fix model with new parameters

--- a/data/datasetFix.ipynb
+++ b/data/datasetFix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,11 +12,274 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.read_csv('combined_dataset.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>domain</th>\n",
+       "      <th>ranking</th>\n",
+       "      <th>isIp</th>\n",
+       "      <th>valid</th>\n",
+       "      <th>activeDuration</th>\n",
+       "      <th>urlLen</th>\n",
+       "      <th>is@</th>\n",
+       "      <th>isredirect</th>\n",
+       "      <th>haveDash</th>\n",
+       "      <th>domainLen</th>\n",
+       "      <th>nosOfSubdomain</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>www.voting-yahoo.com</td>\n",
+       "      <td>10000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>www.zvon.org/xxl/WSDL1.1/Output/index.html</td>\n",
+       "      <td>194914</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7305</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tecportais.com/file-security-update-infonfmati...</td>\n",
+       "      <td>10000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>155</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>bima.astro.umd.edu/nemo/linuxastro/</td>\n",
+       "      <td>7001</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>huarui-tec.com/js/?us.battle.net/login/en/?ref...</td>\n",
+       "      <td>10000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>730</td>\n",
+       "      <td>79</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95905</th>\n",
+       "      <td>www.freewebs.com/ryanrules2/</td>\n",
+       "      <td>5001</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8035</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95906</th>\n",
+       "      <td>www.ireland-information.com/freecelticfonts.htm</td>\n",
+       "      <td>230251</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8400</td>\n",
+       "      <td>47</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95907</th>\n",
+       "      <td>www.clubtaunus.soroptimist.de/img/pro/e.php</td>\n",
+       "      <td>10000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>43</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>29</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95908</th>\n",
+       "      <td>www.askmen.com/sports/business/index.html</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9862</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95909</th>\n",
+       "      <td>xosothudo.com.vn/paypal.co.il/paypal.co.il.cgi...</td>\n",
+       "      <td>771840</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>323</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>95910 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  domain   ranking  isIp   \n",
+       "0                                   www.voting-yahoo.com  10000000     0  \\\n",
+       "1             www.zvon.org/xxl/WSDL1.1/Output/index.html    194914     0   \n",
+       "2      tecportais.com/file-security-update-infonfmati...  10000000     0   \n",
+       "3                    bima.astro.umd.edu/nemo/linuxastro/      7001     0   \n",
+       "4      huarui-tec.com/js/?us.battle.net/login/en/?ref...  10000000     0   \n",
+       "...                                                  ...       ...   ...   \n",
+       "95905                       www.freewebs.com/ryanrules2/      5001     0   \n",
+       "95906    www.ireland-information.com/freecelticfonts.htm    230251     0   \n",
+       "95907        www.clubtaunus.soroptimist.de/img/pro/e.php  10000000     0   \n",
+       "95908          www.askmen.com/sports/business/index.html      2008     0   \n",
+       "95909  xosothudo.com.vn/paypal.co.il/paypal.co.il.cgi...    771840     0   \n",
+       "\n",
+       "       valid  activeDuration  urlLen  is@  isredirect  haveDash  domainLen   \n",
+       "0          0               0      20    0           0         1         20  \\\n",
+       "1          1            7305      42    0           0         0         12   \n",
+       "2          0               0     155    0           0         0         14   \n",
+       "3          0               0      35    0           0         0         18   \n",
+       "4          1             730      79    0           0         1         14   \n",
+       "...      ...             ...     ...  ...         ...       ...        ...   \n",
+       "95905      1            8035      28    0           0         0         16   \n",
+       "95906      1            8400      47    0           0         1         27   \n",
+       "95907      0               0      43    0           0         0         29   \n",
+       "95908      1            9862      41    0           0         0         14   \n",
+       "95909      0               0     323    0           0         0         16   \n",
+       "\n",
+       "       nosOfSubdomain  label  \n",
+       "0                   2      1  \n",
+       "1                   2      0  \n",
+       "2                   1      1  \n",
+       "3                   3      0  \n",
+       "4                   1      1  \n",
+       "...               ...    ...  \n",
+       "95905               2      0  \n",
+       "95906               2      0  \n",
+       "95907               3      1  \n",
+       "95908               2      0  \n",
+       "95909               2      1  \n",
+       "\n",
+       "[95910 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
    ]
   },
   {
@@ -726,6 +989,13 @@
    "source": [
     "data.to_csv('preprocessed.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
