--- a/data/model.ipynb
+++ b/data/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,21 +13,196 @@
     "from sklearn import metrics\n",
     "\n",
     "data = pd.read_csv('preprocessed.csv')\n",
+    "data.drop(['ranking', 'Unnamed: 0'], axis = 1, inplace=True)\n",
     "X, Y = data.drop(['label', 'notlabel'], axis = 1), data[['label', 'notlabel']]\n",
-    "\n",
     "X_train, X_test,y_train, y_test = train_test_split(X, Y, test_size=0.25, shuffle=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>isIp</th>\n",
+       "      <th>valid</th>\n",
+       "      <th>urlLen</th>\n",
+       "      <th>is@</th>\n",
+       "      <th>isredirect</th>\n",
+       "      <th>haveDash</th>\n",
+       "      <th>domainLen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>62042</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60952</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>194</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>144</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22082</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>191</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80508</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>36</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5820</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53950</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39631</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4225</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83367</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66121</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>123</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>71932 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       isIp  valid  urlLen  is@  isredirect  haveDash  domainLen\n",
+       "62042     0      0      18    0           0         0         17\n",
+       "60952     0      0     194    0           0         1        144\n",
+       "22082     0      1     191    0           0         0         12\n",
+       "80508     0      0      36    0           0         0         20\n",
+       "5820      0      1      35    0           0         0         14\n",
+       "...     ...    ...     ...  ...         ...       ...        ...\n",
+       "53950     0      1      34    0           0         0         17\n",
+       "39631     0      1      50    0           0         0         21\n",
+       "4225      0      1      41    0           0         0         13\n",
+       "83367     0      1      26    0           0         0         14\n",
+       "66121     0      0     123    0           0         0         11\n",
+       "\n",
+       "[71932 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = tf.keras.models.Sequential([\n",
-    "    tf.keras.layers.Dense(256, input_shape=(9,), activation='LeakyReLU'),\n",
-    "    tf.keras.layers.BatchNormalization(),\n",
-    "    tf.keras.layers.Dense(512, activation='relu'),\n",
+    "    tf.keras.layers.Dense(256, input_shape=(7,), activation='LeakyReLU'),\n",
     "    tf.keras.layers.BatchNormalization(),\n",
     "    tf.keras.layers.Dense(2, activation=\"softmax\")\n",
     "])\n",
@@ -40,62 +215,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "36/36 [==============================] - 1s 7ms/step - loss: 0.5903 - accuracy: 0.7461\n"
+      "Epoch 1/30\n",
+      "36/36 [==============================] - 0s 9ms/step - loss: 0.4807 - accuracy: 0.7608 - val_loss: 0.6493 - val_accuracy: 0.5775\n",
+      "Epoch 2/30\n",
+      "36/36 [==============================] - 0s 7ms/step - loss: 0.4631 - accuracy: 0.7728 - val_loss: 0.5513 - val_accuracy: 0.6752\n",
+      "Epoch 3/30\n",
+      "36/36 [==============================] - 0s 6ms/step - loss: 0.4577 - accuracy: 0.7751 - val_loss: 0.4953 - val_accuracy: 0.7300\n",
+      "Epoch 4/30\n",
+      "36/36 [==============================] - 0s 7ms/step - loss: 0.4544 - accuracy: 0.7752 - val_loss: 0.4753 - val_accuracy: 0.7531\n",
+      "Epoch 5/30\n",
+      "36/36 [==============================] - 0s 6ms/step - loss: 0.4516 - accuracy: 0.7780 - val_loss: 0.4567 - val_accuracy: 0.7735\n",
+      "Epoch 6/30\n",
+      "36/36 [==============================] - 0s 6ms/step - loss: 0.4493 - accuracy: 0.7801 - val_loss: 0.4482 - val_accuracy: 0.7828\n",
+      "Epoch 7/30\n",
+      "36/36 [==============================] - 0s 6ms/step - loss: 0.4462 - accuracy: 0.7823 - val_loss: 0.4466 - val_accuracy: 0.7849\n",
+      "Epoch 8/30\n",
+      "36/36 [==============================] - 0s 6ms/step - loss: 0.4430 - accuracy: 0.7836 - val_loss: 0.4442 - val_accuracy: 0.7856\n",
+      "Epoch 9/30\n",
+      "36/36 [==============================] - 0s 6ms/step - loss: 0.4413 - accuracy: 0.7850 - val_loss: 0.4450 - val_accuracy: 0.7849\n",
+      "Epoch 10/30\n",
+      "36/36 [==============================] - 0s 6ms/step - loss: 0.4382 - accuracy: 0.7869 - val_loss: 0.4489 - val_accuracy: 0.7862\n",
+      "Epoch 11/30\n",
+      "36/36 [==============================] - 0s 7ms/step - loss: 0.4367 - accuracy: 0.7873 - val_loss: 0.4411 - val_accuracy: 0.7900\n",
+      "Epoch 12/30\n",
+      "36/36 [==============================] - 0s 7ms/step - loss: 0.4329 - accuracy: 0.7890 - val_loss: 0.4438 - val_accuracy: 0.7894\n",
+      "Epoch 13/30\n",
+      "36/36 [==============================] - 0s 7ms/step - loss: 0.4303 - accuracy: 0.7905 - val_loss: 0.4329 - val_accuracy: 0.7919\n",
+      "Epoch 14/30\n",
+      "36/36 [==============================] - 0s 6ms/step - loss: 0.4272 - accuracy: 0.7911 - val_loss: 0.4376 - val_accuracy: 0.7923\n",
+      "Epoch 15/30\n",
+      "36/36 [==============================] - 0s 6ms/step - loss: 0.4261 - accuracy: 0.7915 - val_loss: 0.4310 - val_accuracy: 0.7941\n",
+      "Epoch 16/30\n",
+      "36/36 [==============================] - 0s 8ms/step - loss: 0.4255 - accuracy: 0.7934 - val_loss: 0.4280 - val_accuracy: 0.7934\n",
+      "Epoch 17/30\n",
+      "36/36 [==============================] - 0s 7ms/step - loss: 0.4230 - accuracy: 0.7952 - val_loss: 0.4326 - val_accuracy: 0.7940\n",
+      "Epoch 18/30\n",
+      "36/36 [==============================] - 0s 7ms/step - loss: 0.4200 - accuracy: 0.7975 - val_loss: 0.4193 - val_accuracy: 0.7971\n",
+      "Epoch 19/30\n",
+      "36/36 [==============================] - 0s 7ms/step - loss: 0.4186 - accuracy: 0.7983 - val_loss: 0.4179 - val_accuracy: 0.7965\n",
+      "Epoch 20/30\n",
+      "36/36 [==============================] - 0s 7ms/step - loss: 0.4178 - accuracy: 0.7990 - val_loss: 0.4168 - val_accuracy: 0.7981\n",
+      "Epoch 21/30\n",
+      "36/36 [==============================] - 0s 6ms/step - loss: 0.4181 - accuracy: 0.7971 - val_loss: 0.4139 - val_accuracy: 0.8031\n",
+      "Epoch 22/30\n",
+      "36/36 [==============================] - 0s 6ms/step - loss: 0.4157 - accuracy: 0.8003 - val_loss: 0.4160 - val_accuracy: 0.8009\n",
+      "Epoch 23/30\n",
+      "36/36 [==============================] - 0s 6ms/step - loss: 0.4140 - accuracy: 0.8003 - val_loss: 0.4149 - val_accuracy: 0.7964\n",
+      "Epoch 24/30\n",
+      "36/36 [==============================] - 0s 7ms/step - loss: 0.4148 - accuracy: 0.8005 - val_loss: 0.4135 - val_accuracy: 0.8025\n",
+      "Epoch 25/30\n",
+      "36/36 [==============================] - 0s 6ms/step - loss: 0.4132 - accuracy: 0.8020 - val_loss: 0.4244 - val_accuracy: 0.7997\n",
+      "Epoch 26/30\n",
+      "36/36 [==============================] - 0s 6ms/step - loss: 0.4162 - accuracy: 0.7982 - val_loss: 0.4177 - val_accuracy: 0.7942\n",
+      "Epoch 27/30\n",
+      "36/36 [==============================] - 0s 6ms/step - loss: 0.4139 - accuracy: 0.8012 - val_loss: 0.4118 - val_accuracy: 0.7976\n",
+      "Epoch 28/30\n",
+      "36/36 [==============================] - 0s 6ms/step - loss: 0.4127 - accuracy: 0.8013 - val_loss: 0.4110 - val_accuracy: 0.7996\n",
+      "Epoch 29/30\n",
+      "36/36 [==============================] - 0s 7ms/step - loss: 0.4112 - accuracy: 0.8033 - val_loss: 0.4116 - val_accuracy: 0.8044\n",
+      "Epoch 30/30\n",
+      "36/36 [==============================] - 0s 6ms/step - loss: 0.4103 - accuracy: 0.8019 - val_loss: 0.4123 - val_accuracy: 0.8050\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x2dff4f092b0>"
+       "<keras.callbacks.History at 0x1942558d220>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(X_train, y_train, epochs=1, batch_size=2048)"
+    "model.fit(X_train, y_train, epochs=30, batch_size=2048, validation_data=(X_test,y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "750/750 [==============================] - 2s 2ms/step\n"
+      "750/750 [==============================] - 2s 3ms/step - loss: 0.4123 - accuracy: 0.8050\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.99828714, 0.00171279],\n",
-       "       [0.9982931 , 0.00170688],\n",
-       "       [0.22216767, 0.7778324 ],\n",
-       "       ...,\n",
-       "       [0.21856897, 0.7814311 ],\n",
-       "       [0.9983006 , 0.00169941],\n",
-       "       [0.99830246, 0.00169753]], dtype=float32)"
+       "[0.4123176038265228, 0.8050296306610107]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.predict(X_test)"
+    "model.evaluate(X_test, y_test, verbose=1)"
    ]
   },
   {
@@ -314,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
