--- a/data/datasetFix.ipynb
+++ b/data/datasetFix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,20 +284,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = data[1:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.drop(['domain', 'nosOfSubdomain', 'activeDuration'], axis = 1, inplace=True)"
+    "data.drop(['domain', 'nosOfSubdomain'], axis = 1, inplace=True)"
    ]
   },
   {
@@ -485,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +485,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "244"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(data['domainLen'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,214 +515,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ranking</th>\n",
-       "      <th>isIp</th>\n",
-       "      <th>valid</th>\n",
-       "      <th>urlLen</th>\n",
-       "      <th>is@</th>\n",
-       "      <th>isredirect</th>\n",
-       "      <th>haveDash</th>\n",
-       "      <th>domainLen</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>194914</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>42</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>155</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>7001</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>35</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>79</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95905</th>\n",
-       "      <td>5001</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>28</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95906</th>\n",
-       "      <td>230251</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>47</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>27</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95907</th>\n",
-       "      <td>10000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>43</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>29</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95908</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>41</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>14</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95909</th>\n",
-       "      <td>771840</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>323</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>16</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>95910 rows × 9 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "        ranking  isIp  valid  urlLen  is@  isredirect  haveDash  domainLen   \n",
-       "0      10000000     0      0      20    0           0         1         20  \\\n",
-       "1        194914     0      1      42    0           0         0         12   \n",
-       "2      10000000     0      0     155    0           0         0         14   \n",
-       "3          7001     0      0      35    0           0         0         18   \n",
-       "4      10000000     0      1      79    0           0         1         14   \n",
-       "...         ...   ...    ...     ...  ...         ...       ...        ...   \n",
-       "95905      5001     0      1      28    0           0         0         16   \n",
-       "95906    230251     0      1      47    0           0         1         27   \n",
-       "95907  10000000     0      0      43    0           0         0         29   \n",
-       "95908      2008     0      1      41    0           0         0         14   \n",
-       "95909    771840     0      0     323    0           0         0         16   \n",
-       "\n",
-       "       label  \n",
-       "0          1  \n",
-       "1          0  \n",
-       "2          1  \n",
-       "3          0  \n",
-       "4          1  \n",
-       "...      ...  \n",
-       "95905      0  \n",
-       "95906      0  \n",
-       "95907      1  \n",
-       "95908      0  \n",
-       "95909      1  \n",
-       "\n",
-       "[95910 rows x 9 columns]"
+       "15707"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "max(data['activeDuration'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "data.to_csv('preprocessed.csv')"
    ]
@@ -972,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
