model stuff fixed :-)

--- a/data/model.ipynb
+++ b/data/model.ipynb
@@ -20,204 +20,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "750/750 [==============================] - 2s 2ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>isIp</th>\n",
-       "      <th>valid</th>\n",
-       "      <th>activeDuration</th>\n",
-       "      <th>urlLen</th>\n",
-       "      <th>is@</th>\n",
-       "      <th>isredirect</th>\n",
-       "      <th>haveDash</th>\n",
-       "      <th>domainLen</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>29865</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.255746</td>\n",
-       "      <td>0.015172</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.053279</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2541</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.232571</td>\n",
-       "      <td>0.024828</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.090164</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16128</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.040920</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.086066</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39031</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.069778</td>\n",
-       "      <td>0.022069</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.053279</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52191</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.488317</td>\n",
-       "      <td>0.016092</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.077869</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>79092</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.465079</td>\n",
-       "      <td>0.021149</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.081967</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13356</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.465016</td>\n",
-       "      <td>0.033103</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.057377</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>875</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.015632</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.045082</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>62651</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.018851</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.086066</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44246</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.627873</td>\n",
-       "      <td>0.425287</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.053279</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>71932 rows × 8 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       isIp  valid  activeDuration    urlLen  is@  isredirect  haveDash   \n",
-       "29865   0.0    1.0        0.255746  0.015172  0.0         0.0       0.0  \\\n",
-       "2541    0.0    1.0        0.232571  0.024828  0.0         0.0       0.0   \n",
-       "16128   0.0    0.0        0.000000  0.040920  0.0         0.0       0.0   \n",
-       "39031   0.0    1.0        0.069778  0.022069  0.0         0.0       0.0   \n",
-       "52191   0.0    1.0        0.488317  0.016092  0.0         0.0       0.0   \n",
-       "...     ...    ...             ...       ...  ...         ...       ...   \n",
-       "79092   0.0    1.0        0.465079  0.021149  0.0         0.0       0.0   \n",
-       "13356   0.0    1.0        0.465016  0.033103  0.0         0.0       0.0   \n",
-       "875     0.0    0.0        0.000000  0.015632  0.0         0.0       0.0   \n",
-       "62651   0.0    0.0        0.000000  0.018851  0.0         0.0       0.0   \n",
-       "44246   0.0    1.0        0.627873  0.425287  0.0         0.0       0.0   \n",
-       "\n",
-       "       domainLen  \n",
-       "29865   0.053279  \n",
-       "2541    0.090164  \n",
-       "16128   0.086066  \n",
-       "39031   0.053279  \n",
-       "52191   0.077869  \n",
-       "...          ...  \n",
-       "79092   0.081967  \n",
-       "13356   0.057377  \n",
-       "875     0.045082  \n",
-       "62651   0.086066  \n",
-       "44246   0.053279  \n",
-       "\n",
-       "[71932 rows x 8 columns]"
+       "array([[9.9572033e-01, 4.2796405e-03],\n",
+       "       [9.9915552e-01, 8.4451528e-04],\n",
+       "       [7.6081532e-01, 2.3918468e-01],\n",
+       "       ...,\n",
+       "       [9.9998999e-01, 9.9688141e-06],\n",
+       "       [9.9999988e-01, 8.3339700e-08],\n",
+       "       [9.0439963e-01, 9.5600374e-02]], dtype=float32)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_train"
+    "predictions"
    ]
   },
   {
